feat: add ticket and banner docs
